Scrollbar bug fix

--- a/public/modal.css
+++ b/public/modal.css
@@ -14,7 +14,7 @@
     --animeImageWidth: 225px;
     position: relative;
     display: grid;
-    grid-template-rows: calc(var(--titleSize) + var(--titleMargin)) 3fr;
+    grid-template-rows: calc(var(--titleSize) + var(--titleMargin)) 1.5em 3fr;
     grid-template-columns: var(--animeImageWidth) minmax(30em, 50em);
 
     top: 50%;
@@ -46,7 +46,7 @@
 .window-bar{
     display: flex;
     flex-flow: column;
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1;
     min-width: var(--animeImageWidth); /* the image width */
     overflow-y: auto;
@@ -80,11 +80,12 @@
 
 .window-tabs{
     width: 100%;
+    grid-row: 2;
+    grid-column: 2;
     display: inline-flex;
     justify-content: flex-end;
     border-bottom: 1px solid lightgrey;
     /* Want to make it stick to the top */
-    position: sticky;
     top: 0;
     background-color: white;
 
@@ -108,6 +109,8 @@
 
 
 .window-details{
+    grid-column: 2;
+    grid-row: 3;
     background-color: white;
     overflow-y: auto;
     margin-left: 15px;
